--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^2.2.19",
+    "tailwindcss-types": "^3.2.7-r.1",
     "vite": "^6.2.0"
   }
 }
